ingresspolicy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: salmahany
  name: sampleapp-ingress
spec:
  rules:
  - host: sample-app.salmahany.apps.apps.ocpuat.devopsconsulting.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sampledeployment
            port:
              number: 8080
